Add Assumption guarantee to MontiArc